forgotten password and user registration validation completed

--- a/views/admin/Products.ejs
+++ b/views/admin/Products.ejs
@@ -42,7 +42,7 @@
                         <tr>
                           <td class="text-center">
                             <img class="rounded product-img-preview"
-                            src="/public/adminAssets/images/<%= product[i].image[0]%>" alt="pImage">
+                            src="/public/adminAssets/images/Screenshot 2023-10-16 093531.jpg" alt="pImage">
                           </td>
                           <td style="color: aliceblue;" class="text-center">
                             <%= product[i].productName %>
