--- a/views/users/mainLayout/mainHeader.ejs
+++ b/views/users/mainLayout/mainHeader.ejs
@@ -1,109 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-   
-
-
-
-
-
-    <link rel="icon" type="image/png" href="/static/userAssets/images/icons/favicon.png"/>
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/bootstrap/css/bootstrap.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/iconic/css/material-design-iconic-font.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/linearicons-v1.0.0/icon-font.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/animate/animate.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/css-hamburgers/hamburgers.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/animsition/css/animsition.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/select2/select2.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/daterangepicker/daterangepicker.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/slick/slick.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/MagnificPopup/magnific-popup.css">
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/perfect-scrollbar/perfect-scrollbar.css">
-
-
-
-    <link rel="stylesheet" type="text/css" href="/static/userAssets/css/util.css">
+	<title>Home 03</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="/static/userAssets/images/icons/favicon.png"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/iconic/css/material-design-iconic-font.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/linearicons-v1.0.0/icon-font.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/animate/animate.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/animsition/css/animsition.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/select2/select2.min.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/daterangepicker/daterangepicker.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/slick/slick.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/MagnificPopup/magnific-popup.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/perfect-scrollbar/perfect-scrollbar.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/css/main.css">
-
+<!--===============================================================================================-->
 </head>
-<body>
+<body class="animsition">
+	
+	<!-- Header -->
+	<header class="header-v3">
+		<!-- Header desktop -->
+		<div class="container-menu-desktop trans-03">
+			<div class="wrap-menu-desktop">
+				<nav class="limiter-menu-desktop p-l-45">
+					
+					<!-- Logo desktop -->		
+					<a href="#" class="logo">
+						<img src="/static/userAssets/images/icons/logo-02.png" alt="IMG-LOGO">
+					</a>
 
+					<!-- Menu desktop -->
+					<div class="menu-desktop">
+						<ul class="main-menu">
+							<li>
+								<a href="">Home</a>
+								<ul class="sub-menu">
+									<li><a href="">Homepage 1</a></li>
+									<li><a href="">Homepage 2</a></li>
+									<li><a href="">Homepage 3</a></li>
+								</ul>
+							</li>
 
-    <div class="wrap-menu-desktop">
-        <nav class="limiter-menu-desktop container">
-            
-            <!-- Logo desktop -->		
-            <a href="#" class="logo">
-                <img src="/static/userAssets/images/icons/logo-02.png" alt="IMG-LOGO">
-            </a>
+							<li>
+								<a href="product.html">Shop</a>
+							</li>
 
-            <!-- Menu desktop -->
-            <div class="menu-desktop">
-                <ul class="main-menu">
-                    <li class="active-menu">
-                        <a href="home.ejs">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="home.ejs">Homepage 1</a></li>
-                            <li><a href="home-02.html">Homepage 2</a></li>
-                            <li><a href="home-03.html">Homepage 3</a></li>
-                        </ul>
-                    </li>
+							<li class="label1" data-label1="hot">
+								<a href="shoping-cart.html">Features</a>
+							</li>
 
-                    <li>
-                        <a href="product.html">Shop</a>
-                    </li>
+							<li>
+								<a href="blog.html">Blog</a>
+							</li>
 
-                    <li class="label1" data-label1="hot">
-                        <a href="shoping-cart.html">Features</a>
-                    </li>
+							<li>
+								<a href="about.html">About</a>
+							</li>
 
-                    <li>
-                        <a href="blog.html">Blog</a>
-                    </li>
+							<li>
+								<a href="contact.html">Contact</a>
+							</li>
+						</ul>
+					</div>	
 
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>	
-
-            <!-- Icon header -->
-            <div class="wrap-icon-header flex-w flex-r-m">
-                <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-                    <i class="zmdi zmdi-search"></i>
-                </div>
-
-                <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
-                    <i class="zmdi zmdi-shopping-cart"></i>
-                </div>
-
-                <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
-                    <i class="zmdi zmdi-favorite-outline"></i>
-                </a>
-            </div>
-        </nav>
-    </div>	
+					<!-- Icon header -->
+					<div class="wrap-icon-header flex-w flex-r-m h-full">							
+						<div class="flex-c-m h-full p-r-25 bor6">
+							<div class="icon-header-item cl0 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="2">
+								<i class="zmdi zmdi-shopping-cart"></i>
+							</div>
+						</div>
+							
+						<div class="flex-c-m h-full p-lr-19">
+							<div class="icon-header-item cl0 hov-cl1 trans-04 p-lr-11 js-show-sidebar">
+								<i class="zmdi zmdi-menu"></i>
+							</div>
+						</div>
+					</div>
+				</nav>
+			</div>	
+		</div>
 
 
 </body>
